Applayout/Navigation [FIX] Bleeding arrow

--- a/scss/plugins/lucca-app-layout/components/_navigation.scss
+++ b/scss/plugins/lucca-app-layout/components/_navigation.scss
@@ -25,6 +25,7 @@
 			transition-property: background-color, color;
 			transition-duration: 150ms;
 			transition-timing-function: ease-out;
+			overflow: hidden;
 
 			&:before {
 				margin-left: 0;
